--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "reactify": "^0.17.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [
     "starter-kit",
